pull in latest from new branch of qa-standards repo

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -741,7 +741,7 @@ jobs:
       - name: Force QA repo to test ref
         run: |
           git -C qa-standards-dashboard-data fetch origin --tags --prune
-          git -C qa-standards-dashboard-data checkout 0128ad57c5489633ef94b1d19b7bd33c5b882269
+          git -C qa-standards-dashboard-data checkout fix-mochawesome-cypress-video-links
           git -C qa-standards-dashboard-data rev-parse HEAD
           yarn --cwd qa-standards-dashboard-data install --frozen-lockfile
 
@@ -1032,7 +1032,7 @@ jobs:
       - name: Force QA repo to test ref
         run: |
           git -C qa-standards-dashboard-data fetch origin --tags --prune
-          git -C qa-standards-dashboard-data checkout 0128ad57c5489633ef94b1d19b7bd33c5b882269
+          git -C qa-standards-dashboard-data checkout fix-mochawesome-cypress-video-links
           git -C qa-standards-dashboard-data rev-parse HEAD
           yarn --cwd qa-standards-dashboard-data install --frozen-lockfile
 
@@ -1531,6 +1531,14 @@ jobs:
 
       - name: Init Dashboard Data Repo
         uses: ./.github/workflows/init-data-repo
+
+              # Replacement job to force the use of my branch with the fix
+      - name: Force QA repo to test ref
+        run: |
+          git -C qa-standards-dashboard-data fetch origin --tags --prune
+          git -C qa-standards-dashboard-data checkout fix-mochawesome-cypress-video-links
+          git -C qa-standards-dashboard-data rev-parse HEAD
+          yarn --cwd qa-standards-dashboard-data install --frozen-lockfile
 
       - name: Set Up BigQuery Creds
         uses: ./.github/workflows/configure-bigquery
