--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -2034,6 +2034,8 @@ jobs:
   cd-prod-deploy:
     name: CD Production Deploy
     runs-on: ubuntu-22.04
+    permissions:
+      contents: write
     needs: [build, set-deploy-environments]
     if: ${{ needs.build.outputs.entry_names != '' && needs.build.outputs.continuous_deployment == 'true' }}
     steps:
@@ -2069,6 +2071,12 @@ jobs:
           else
             echo "channel=$channel" >> $GITHUB_OUTPUT
           fi
+
+      - name: Debug CD gating values
+        run: |
+          echo "entry_names=${{ needs.build.outputs.entry_names }}"
+          echo "continuous_deployment=${{ needs.build.outputs.continuous_deployment }}"
+          echo "slack_channel=${{ steps.determine-channel.outputs.channel }}"
 
       - name: Dispatch Event to Next Workflow
         run: |
