--- a/config/changed-apps-build.json
+++ b/config/changed-apps-build.json
@@ -334,7 +334,8 @@
     },
     {
       "rootFolder": "vaos",
-      "slackGroup": "@vaos-fe-dev"
+      "slackGroup": "@vaos-fe-dev",
+      "slackChannel": "C06JM7UUHE3"
     },
     {
       "rootFolder": "verify",
