--- a/config/changed-apps-build.json
+++ b/config/changed-apps-build.json
@@ -150,7 +150,7 @@
     },
     {
       "rootFolder": "ivc-champva",
-      "slackGroup": "<@U074HNVJ7TQ> <@U066MEYGKDX> <@U02R5NVRJEP> <@U063V879TEX>",
+      "slackGroup": "<@U074HNVJ7TQ> <@U066MEYGKDX> <@U02R5NVRJEP>",
       "slackChannel": "C068Y3ZFKNJ"
     },
     {
