Comment out bonus stress tests job

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -2149,92 +2149,92 @@ jobs:
           aws_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-  stress-tests:
-    name: Stress Tests
-    needs: [fetch-allow-lists, tests-prep]
-    timeout-minutes: 30
-    runs-on: ubuntu-16-cores-22.04
-    outputs:
-      tests_ran: ${{ steps.run-tests.outputs.tests_ran }}
+  # stress-tests:
+  #   name: Stress Tests
+  #   needs: [fetch-allow-lists, tests-prep]
+  #   timeout-minutes: 30
+  #   runs-on: ubuntu-16-cores-22.04
+  #   outputs:
+  #     tests_ran: ${{ steps.run-tests.outputs.tests_ran }}
 
-    env:
-      TESTS_TO_STRESS_TEST: ${{ needs.tests-prep.outputs.tests-to-stress-test }}
+  #   env:
+  #     TESTS_TO_STRESS_TEST: ${{ needs.tests-prep.outputs.tests-to-stress-test }}
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@cd7d8d697e10461458bc61a30d094dc601a8b017
-        with:
-          fetch-depth: 0
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@cd7d8d697e10461458bc61a30d094dc601a8b017
+  #       with:
+  #         fetch-depth: 0
 
-      - name: Install dependencies
-        uses: ./.github/workflows/install
-        timeout-minutes: 30
-        with:
-          key: ${{ hashFiles('yarn.lock') }}
-          yarn_cache_folder: .cache/yarn
-          path: |
-            .cache/yarn
-            node_modules
+  #     - name: Install dependencies
+  #       uses: ./.github/workflows/install
+  #       timeout-minutes: 30
+  #       with:
+  #         key: ${{ hashFiles('yarn.lock') }}
+  #         yarn_cache_folder: .cache/yarn
+  #         path: |
+  #           .cache/yarn
+  #           node_modules
 
-      - name: Configure AWS credentials
-        uses: ./.github/workflows/configure-aws-credentials
-        with:
-          aws_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: us-gov-west-1
+  #     - name: Configure AWS credentials
+  #       uses: ./.github/workflows/configure-aws-credentials
+  #       with:
+  #         aws_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws_region: us-gov-west-1
 
-      - name: Get va-vsp-bot token
-        uses: ./.github/workflows/inject-secrets
-        with:
-          ssm_parameter: /devops/VA_VSP_BOT_GITHUB_TOKEN
-          env_variable_name: VA_VSP_BOT_GITHUB_TOKEN
+  #     - name: Get va-vsp-bot token
+  #       uses: ./.github/workflows/inject-secrets
+  #       with:
+  #         ssm_parameter: /devops/VA_VSP_BOT_GITHUB_TOKEN
+  #         env_variable_name: VA_VSP_BOT_GITHUB_TOKEN
 
-      - name: Init Dashboard Data Repo
-        uses: ./.github/workflows/init-data-repo
+  #     - name: Init Dashboard Data Repo
+  #       uses: ./.github/workflows/init-data-repo
 
-      - name: Set Up BigQuery Creds
-        uses: ./.github/workflows/configure-bigquery
+  #     - name: Set Up BigQuery Creds
+  #       uses: ./.github/workflows/configure-bigquery
 
-      - name: Fetch Unit Test Stability Allow List
-        run: yarn get-allow-list
-        working-directory: qa-standards-dashboard-data
-        env:
-          TEST_TYPE: unit_test
+  #     - name: Fetch Unit Test Stability Allow List
+  #       run: yarn get-allow-list
+  #       working-directory: qa-standards-dashboard-data
+  #       env:
+  #         TEST_TYPE: unit_test
       
-      - name: Check for newly added disallowed tests
-        run: node script/github-actions/double-check-allow-list.js
-        env:
-          TEST_TYPE: unit_test
-          TESTS: ${{ env.TESTS_TO_STRESS_TEST }}
-          TESTS_PROPERTY: 'TESTS_TO_STRESS_TEST'
+  #     - name: Check for newly added disallowed tests
+  #       run: node script/github-actions/double-check-allow-list.js
+  #       env:
+  #         TEST_TYPE: unit_test
+  #         TESTS: ${{ env.TESTS_TO_STRESS_TEST }}
+  #         TESTS_PROPERTY: 'TESTS_TO_STRESS_TEST'
           
-      - name: Create test results folder
-        run: mkdir -p test-results
+  #     - name: Create test results folder
+  #       run: mkdir -p test-results
 
-      - name: Run stress tests
-        id: run-tests
-        run: |
-          if [[ -n "${{ env.TESTS_TO_STRESS_TEST }}" ]]; then
-            yarn test:unit:gha ${{ env.TESTS_TO_STRESS_TEST }} --coverage --log-level verbose
-            echo "tests_ran=true" >> $GITHUB_OUTPUT
-          else
-            echo "No tests to run"
-            echo "tests_ran=false" >> $GITHUB_OUTPUT
-          fi
-        env:
-          MOCHA_FILE: test-results/stress-tests.xml
-          IS_STRESS_TEST: true
+  #     - name: Run stress tests
+  #       id: run-tests
+  #       run: |
+  #         if [[ -n "${{ env.TESTS_TO_STRESS_TEST }}" ]]; then
+  #           yarn test:unit:gha ${{ env.TESTS_TO_STRESS_TEST }} --coverage --log-level verbose
+  #           echo "tests_ran=true" >> $GITHUB_OUTPUT
+  #         else
+  #           echo "No tests to run"
+  #           echo "tests_ran=false" >> $GITHUB_OUTPUT
+  #         fi
+  #       env:
+  #         MOCHA_FILE: test-results/stress-tests.xml
+  #         IS_STRESS_TEST: true
       
-      - name: Archive stress test results
-        if: ${{ always() && steps.run-tests.outputs.tests_ran == 'true' }}
-        uses: ./.github/workflows/upload-artifact
-        with:
-          name: unit-test-stress-test-results-${{ matrix.ci_node_index }}
-          path: mocha/results
+  #     - name: Archive stress test results
+  #       if: ${{ always() && steps.run-tests.outputs.tests_ran == 'true' }}
+  #       uses: ./.github/workflows/upload-artifact
+  #       with:
+  #         name: unit-test-stress-test-results-${{ matrix.ci_node_index }}
+  #         path: mocha/results
 
-      - name: Upload Coverage Report Artifact
-        if: ${{ always() && steps.run-tests.outputs.tests_ran == 'true' }}
-        uses: ./.github/workflows/upload-artifact
-        with:
-          name: stress-test-coverage
-          path: coverage
+  #     - name: Upload Coverage Report Artifact
+  #       if: ${{ always() && steps.run-tests.outputs.tests_ran == 'true' }}
+  #       uses: ./.github/workflows/upload-artifact
+  #       with:
+  #         name: stress-test-coverage
+  #         path: coverage
