--- a/package.json
+++ b/package.json
@@ -272,6 +272,7 @@
     "@department-of-veterans-affairs/vagov-platform": "^0.0.1",
     "@mapbox/mapbox-sdk": "~0.13.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "@simplewebauthn/browser": "^13.1.2",
     "blob-polyfill": "^5.0.20210201",
     "cacheable-request": "^4.0.1",
     "camelcase-keys-recursive": "^1.0.0",
