Refactor test imports to include file extensions
- Updated import statements in unit tests to include the appropriate file extensions (.tsx, .ts) for components, loaders, and utilities.
- Modified the yarn.lock file to update dependencies and their versions.

--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
+    "@babel/preset-typescript": "^7.27.1",
     "@babel/register": "^7.25.9",
     "@babel/traverse": "^7.25.9",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
