--- a/src/applications/avs/tsconfig.json
+++ b/src/applications/avs/tsconfig.json
@@ -5,12 +5,16 @@
     "paths": {
       "~/*": ["../../../src/*"]
     },
-    "typeRoots": ["./types/declarations", "../../../node_modules/@types"]
+    "typeRoots": ["../../../node_modules/@types"]
   },
   "include": [
     "./**/*.ts", 
     "./**/*.tsx",
-    "./types/declarations/*.d.ts"
+    "./types/declarations/va-components.d.ts",
+    "../../../src/platform/utilities/types.d.ts",
+    "../../../src/platform/startup/types.d.ts",
+    "../../../src/platform/user/types.d.ts",
+    "../../../src/platform/mhv/types.d.ts"
   ],
   "exclude": ["node_modules", "**/*.spec.ts", "**/*.spec.tsx", "tests/**/*"]
 }
