--- a/src/applications/vaos/services/mocks/v2/scheduling_configurations.json
+++ b/src/applications/vaos/services/mocks/v2/scheduling_configurations.json
@@ -133,6 +133,29 @@
             }
           },
           {
+            "id": "individualSubstanceUseDisorder",
+            "name": "Individual Substance Use Disorder",
+            "stopCodes": [
+              {
+                "primary": "534",
+                "secondary": "999"
+              }
+            ],
+            "direct": {
+              "patientHistoryRequired": true,
+              "patientHistoryDuration": 730,
+              "canCancel": true,
+              "enabled": true
+            },
+            "request": {
+              "patientHistoryRequired": false,
+              "patientHistoryDuration": 365,
+              "submittedRequestLimit": 2,
+              "enterpriseSubmittedRequestLimit": 2,
+              "enabled": true
+            }
+          },
+          {
             "id": "audiology",
             "name": "Audiology",
             "stopCodes": [
