--- a/.github/workflows/continuous-integration-2.yml
+++ b/.github/workflows/continuous-integration-2.yml
@@ -1959,79 +1959,85 @@ jobs:
       - name: Set environments for deploy matrix
         id: set-environments
         run: echo environments={\"include\":[${{env.DEV}},${{env.STAGING}}]} >> $GITHUB_OUTPUT
-
-  deploy:
-    name: Deploy
-    needs: [build, set-deploy-environments]
-    # if: always() && github.ref == 'refs/heads/main' && needs.set-deploy-environments.result == 'success'
-    runs-on: ubuntu-22.04
-    strategy:
-      matrix: ${{ fromJson(needs.set-deploy-environments.outputs.environments) }}
-    env:
-      IS_ISOLATED_APP_BUILD: ${{ needs.build.outputs.entry_names != '' }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@cd7d8d697e10461458bc61a30d094dc601a8b017
-        with:
-          fetch-depth: 0
-
-      - name: Install dependencies
-        uses: ./.github/workflows/install
-        timeout-minutes: 30
-        with:
-          key: ${{ hashFiles('yarn.lock') }}
-          yarn_cache_folder: .cache/yarn
-          path: |
-            .cache/yarn
-            node_modules
-
-      - name: Check if commit can be deployed
-        id: check-deployability
-        run: node ./script/github-actions/check-deployability.js
-        env:
-          BUILDTYPE: ${{ matrix.environment }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Configure AWS credentials (1)
-        if: steps.check-deployability.outputs.is_deployable == 'true'
-        uses: ./.github/workflows/configure-aws-credentials
-        with:
-          aws_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: us-gov-west-1
-          
-
-      - name: Get AWS IAM role
-        if: steps.check-deployability.outputs.is_deployable == 'true'
-        uses: ./.github/workflows/inject-secrets
-        with:
-          ssm_parameter: /frontend-team/github-actions/parameters/${{ matrix.iam_role }}
-          env_variable_name: ${{ matrix.iam_role }}
-
-      - name: Configure AWS Credentials (2)
-        if: steps.check-deployability.outputs.is_deployable == 'true'
-        uses: ./.github/workflows/configure-aws-credentials
-        with:
-          aws_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: us-gov-west-1
-          role: ${{ env.AWS_FRONTEND_NONPROD_ROLE != '' && env.AWS_FRONTEND_NONPROD_ROLE || env.AWS_FRONTEND_PROD_ROLE }}
-          role_duration: 900
-          session_name: vsp-frontendteam-githubaction
-          
-
-      - name: Deploy
-        if: steps.check-deployability.outputs.is_deployable == 'true'
+        
+      - name: Debug CD gating values
         run: |
-          if [[ "${{ env.IS_ISOLATED_APP_BUILD }}" == "true" ]]; then
-            ./script/github-actions/partial-deploy.sh -s $SRC -d $DEST -a $ASSET_DEST -v
-          else
-            ./script/github-actions/deploy.sh -s $SRC -d $DEST -a $ASSET_DEST -v
-          fi
-        env:
-          SRC: s3://vetsgov-website-builds-s3-upload/${{ github.sha }}/${{ matrix.environment }}.tar.bz2
-          DEST: s3://${{ matrix.bucket }}
-          ASSET_DEST: s3://${{ matrix.asset_bucket }}
+          echo "entry_names=${{ needs.build.outputs.entry_names }}"
+          echo "continuous_deployment=${{ needs.build.outputs.continuous_deployment }}"
+
+
+  # deploy:
+  #   name: Deploy
+  #   needs: [build, set-deploy-environments]
+  #   # if: always() && github.ref == 'refs/heads/main' && needs.set-deploy-environments.result == 'success'
+  #   runs-on: ubuntu-22.04
+  #   strategy:
+  #     matrix: ${{ fromJson(needs.set-deploy-environments.outputs.environments) }}
+  #   env:
+  #     IS_ISOLATED_APP_BUILD: ${{ needs.build.outputs.entry_names != '' }}
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@cd7d8d697e10461458bc61a30d094dc601a8b017
+  #       with:
+  #         fetch-depth: 0
+
+  #     - name: Install dependencies
+  #       uses: ./.github/workflows/install
+  #       timeout-minutes: 30
+  #       with:
+  #         key: ${{ hashFiles('yarn.lock') }}
+  #         yarn_cache_folder: .cache/yarn
+  #         path: |
+  #           .cache/yarn
+  #           node_modules
+
+  #     - name: Check if commit can be deployed
+  #       id: check-deployability
+  #       run: node ./script/github-actions/check-deployability.js
+  #       env:
+  #         BUILDTYPE: ${{ matrix.environment }}
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  #     - name: Configure AWS credentials (1)
+  #       if: steps.check-deployability.outputs.is_deployable == 'true'
+  #       uses: ./.github/workflows/configure-aws-credentials
+  #       with:
+  #         aws_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws_region: us-gov-west-1
+          
+
+  #     - name: Get AWS IAM role
+  #       if: steps.check-deployability.outputs.is_deployable == 'true'
+  #       uses: ./.github/workflows/inject-secrets
+  #       with:
+  #         ssm_parameter: /frontend-team/github-actions/parameters/${{ matrix.iam_role }}
+  #         env_variable_name: ${{ matrix.iam_role }}
+
+  #     - name: Configure AWS Credentials (2)
+  #       if: steps.check-deployability.outputs.is_deployable == 'true'
+  #       uses: ./.github/workflows/configure-aws-credentials
+  #       with:
+  #         aws_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws_region: us-gov-west-1
+  #         role: ${{ env.AWS_FRONTEND_NONPROD_ROLE != '' && env.AWS_FRONTEND_NONPROD_ROLE || env.AWS_FRONTEND_PROD_ROLE }}
+  #         role_duration: 900
+  #         session_name: vsp-frontendteam-githubaction
+          
+
+  #     - name: Deploy
+  #       if: steps.check-deployability.outputs.is_deployable == 'true'
+  #       run: |
+  #         if [[ "${{ env.IS_ISOLATED_APP_BUILD }}" == "true" ]]; then
+  #           ./script/github-actions/partial-deploy.sh -s $SRC -d $DEST -a $ASSET_DEST -v
+  #         else
+  #           ./script/github-actions/deploy.sh -s $SRC -d $DEST -a $ASSET_DEST -v
+  #         fi
+  #       env:
+  #         SRC: s3://vetsgov-website-builds-s3-upload/${{ github.sha }}/${{ matrix.environment }}.tar.bz2
+  #         DEST: s3://${{ matrix.bucket }}
+  #         ASSET_DEST: s3://${{ matrix.asset_bucket }}
 
   cd-prod-deploy:
     name: CD Production Deploy
