--- a/.github/workflows/continuous-integration-2.yml
+++ b/.github/workflows/continuous-integration-2.yml
@@ -1956,6 +1956,8 @@ jobs:
         \\\"iam_role\\\": \\\"AWS_FRONTEND_NONPROD_ROLE\\\"
         }"
     steps:
+      - name: Dump outputs as JSON
+        run: echo '${{ toJSON(needs.build.outputs) }}'
       - name: Set environments for deploy matrix
         id: set-environments
         run: echo environments={\"include\":[${{env.DEV}},${{env.STAGING}}]} >> $GITHUB_OUTPUT
